last time to commit at 20180512

--- a/notebook/Python 数据分析与绘图/py35_seaborn_7_相关 PairGird .ipynb
+++ b/notebook/Python 数据分析与绘图/py35_seaborn_7_相关 PairGird .ipynb
@@ -165,8 +165,7 @@
    "source": [
     "g = sns.PairGrid(iris)\n",
     "g.map_upper(plt.scatter)\n",
-    "g.map_lower(sns.kdeplot, cmap=\"Blues_d\")\n",
-    "g.map_diag(sns.kdeplot, lw=3, legend=False);"
+    "g.map_lower(sns.kdeplot, cmap=\"Blues_d\")\n"
    ]
   },
   {
