--- a/notebook/sdm_2_1_基本信息&司法诉讼.ipynb
+++ b/notebook/sdm_2_1_基本信息&司法诉讼.ipynb
@@ -2555,7 +2555,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-12T07:31:17.402782Z",
      "start_time": "2018-04-12T07:31:17.362780Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -5680,7 +5681,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-12T07:33:18.976736Z",
      "start_time": "2018-04-12T07:33:18.972735Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -9276,7 +9278,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-12T07:45:36.252905Z",
      "start_time": "2018-04-12T07:45:36.171901Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -10847,7 +10850,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-12T07:55:03.736364Z",
      "start_time": "2018-04-12T07:54:56.917974Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -10939,7 +10943,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-12T07:37:27.675960Z",
      "start_time": "2018-04-12T07:37:26.261879Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
