--- a/notebook/00.ipynb
+++ b/notebook/00.ipynb
@@ -25,7 +25,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "os."
+   ]
   },
   {
    "cell_type": "code",
